--- a/client/pages/list.html
+++ b/client/pages/list.html
@@ -1,3 +1,5 @@
+<div ng-include="'client/pages/menu.html'"></div>
+
 <form>
 	<label>Name:</label>
 	<input type="text" ng-model="vm.newList.name" />
