--- a/client/pages/todo.html
+++ b/client/pages/todo.html
@@ -1,7 +1,7 @@
 <div ng-include="'client/pages/menu.html'"></div>
 
 <form>
-	<select ng-model="vm.newList.listId">
+	<select ng-model="vm.newTodo.listId">
 		<option 
 			ng-repeat="listItem in vm.list"
 			value="{{listItem._id}}">
@@ -10,7 +10,7 @@
 	</select>
 
 	<label>Name:</label>
-	<input type="text" ng-model="vm.newList.text"/>
+	<input type="text" ng-model="vm.newTodo.text"/>
 
 	<button ng-click="vm.add()">Add</button>
 </form>
